--- a/GeoXRay/app/src/main/AndroidManifest.xml
+++ b/GeoXRay/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <!-- Indicates that app requires ARCore ("AR Required"). Ensures app is only
          visible in the Google Play Store on devices that support ARCore.
     -->
-    <uses-feature android:name="android.hardware.camera.ar" />
+    <uses-feature android:name="android.hardware.camera.ar" android:required="true"/>
 
     <uses-feature android:glEsVersion="0x00020000" android:required="true" />
 
@@ -18,6 +18,7 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
+            android:largeHeap="true"
             android:theme="@style/AppTheme">
 
         <!-- Indicates that app requires ARCore ("AR Required"). Causes Google
@@ -25,7 +26,7 @@
         -->
         <meta-data android:name="com.google.ar.core" android:value="required" />
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" android:screenOrientation="locked">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
