--- a/GeoXRay/app/src/main/AndroidManifest.xml
+++ b/GeoXRay/app/src/main/AndroidManifest.xml
@@ -4,6 +4,10 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <!-- Indicates that app requires ARCore ("AR Required"). Ensures app is only
          visible in the Google Play Store on devices that support ARCore.
@@ -11,6 +15,8 @@
     <uses-feature android:name="android.hardware.camera.ar" android:required="true"/>
 
     <uses-feature android:glEsVersion="0x00020000" android:required="true" />
+
+    <uses-feature android:name="android.hardware.location.gps" />
 
     <application
             android:allowBackup="true"
